# sandfall

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
res/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  alchimia.m.cpp  camera.hpp  config.hpp  editor.cpp  editor.hpp  editor.m.cpp  event.h  event.hpp  explosion.cpp  explosion.hpp  game.m.cpp  generator.h  log.cpp  log.h  mouse.cpp  mouse.hpp  pixel.cpp  pixel.h  pixel.hpp  pixel_api.cpp  pixel_api.h  player.hpp  random.hpp  sandfall.m.cpp  serialise.hpp  shader.cpp  shader.h  texture.cpp  texture.h  tile.cpp  tile.h  timer.cpp  update.cpp  update.hpp  update_functions.cpp  update_functions.h  update_rigid_bodies.cpp  update_rigid_bodies.hpp  utility.cpp  (+7 more)
src/core/: CMakeLists.txt  apecs.hpp  buffer.hpp  camera.hpp  common.hpp  debug.cpp  debug.hpp  editor.hpp  enemy.hpp  entity.cpp  entity.hpp  event.hpp  explosion.cpp  explosion.hpp  mouse.cpp  mouse.hpp  player.cpp  player.hpp  renderer.cpp  renderer.hpp  serialisation.cpp  serialisation.hpp  shader.cpp  shader.hpp  shape_renderer.cpp  shape_renderer.hpp  texture.cpp  texture.hpp  ui.cpp  ui.hpp  update_rigid_bodies.cpp  update_rigid_bodies.hpp  utility.cpp  utility.hpp  window.cpp  window.hpp  world.cpp  world.hpp
src/graphics/: buffer.cpp  buffer.hpp  player_renderer.cpp  player_renderer.hpp  render_context.cpp  render_context.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.h  shader.hpp  shape_renderer.cpp  shape_renderer.hpp  texture.cpp  texture.hpp  ui.cpp  ui.hpp  window.cpp  window.h  window.hpp
src/utility/: log.cpp  log.h  random.hpp  scope_exit.hpp  timer.hpp
